Adding data path

--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv()"
+    "import os"
    ]
   },
   {
@@ -42,8 +42,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = \"./hackathon_low_mixed_venous_oximetry.csv\"\n",
-    "file = \"./hackathon_low_cardiac_output.csv\"\n",
+    "data_location = os.path.normpath('../data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = os.path.join(data_location, \"hackathon_low_mixed_venous_oximetry.csv\")\n",
+    "file = os.path.join(data_location, \"hackathon_low_cardiac_output.csv\")\n",
     "df = (\n",
     "    pd.read_csv(file)\n",
     "    .dropna()\n",
