--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -17,15 +17,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "feature_columns = [\n",
-    "     'SvO2', 'Heart_Rate', 'Ejection_Fraction',\n",
-    "       'Radial_Artery_Mean_Pressure', 'Radial_Artery_Systolic_Pressure',\n",
-    "       'Radial_Artery_Diastolic_Pressure', 'Radial_Artery_DpDt',\n",
-    "       'Pulmonary_Artery_Mean_Pressure', 'Central_Venous_Pressure', 'gender',\n",
-    "       'age_years', 'bsa', 'height', 'weight'\n",
-    "]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -52,11 +44,100 @@
    "outputs": [],
    "source": [
     "file = os.path.join(data_location, \"hackathon_low_mixed_venous_oximetry.csv\")\n",
-    "file = os.path.join(data_location, \"hackathon_low_cardiac_output.csv\")\n",
+    "# file = os.path.join(data_location, \"hackathon_low_cardiac_output.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_columns = [\n",
+    "    'Heart_Rate', 'Ejection_Fraction',\n",
+    "       'Radial_Artery_Mean_Pressure', 'Radial_Artery_Systolic_Pressure',\n",
+    "       'Radial_Artery_Diastolic_Pressure', 'Radial_Artery_DpDt',\n",
+    "       'Pulmonary_Artery_Mean_Pressure', 'Central_Venous_Pressure', 'gender',\n",
+    "       'age_years', 'bsa', 'height', 'weight'\n",
+    "]\n",
+    "\n",
+    "if 'cardiac_output' in file:\n",
+    "    feature_columns += ['SvO2']\n",
+    "    regression_label = \"RegressionLabel-CardiacIndex\"\n",
+    "else:\n",
+    "\n",
+    "    feature_columns += ['Cardiac_Output']\n",
+    "    regression_label = \"RegressionLabel-SvO2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = (\n",
     "    pd.read_csv(file)\n",
     "    .dropna()\n",
-    ")"
+    ")\n",
+    "\n",
+    "df = (\n",
+    "    df\n",
+    "    .assign(ClassificationLabel = df.ClassificationLabel==\"Positive\")\n",
+    "    .assign(gender=df.gender==\"F\")\n",
+    ")\n",
+    "\n",
+    "import sklearn.covariance\n",
+    "env = sklearn.covariance.EllipticEnvelope()\n",
+    "\n",
+    "env.fit(df[feature_columns].values)\n",
+    "\n",
+    "outliers = env.predict(df[feature_columns].values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(outliers==-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[outliers==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in feature_columns:\n",
+    "    print(col)\n",
+    "    if col != 'gender':\n",
+    "        df[col].hist(bins=20)\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train test split"
    ]
   },
   {
@@ -70,11 +151,7 @@
     "train_subjects = subjects[:N]\n",
     "test_subjects = subjects[N:]\n",
     "\n",
-    "df = (\n",
-    "    df\n",
-    "    .assign(ClassificationLabel = df.ClassificationLabel==\"Positive\")\n",
-    "    .assign(gender=df.gender==\"F\")\n",
-    ")\n",
+    "\n",
     "\n",
     "df_train=df.loc[df.subject_id.isin(train_subjects)]\n",
     "df_test=df.loc[df.subject_id.isin(test_subjects)]\n",
@@ -158,7 +235,7 @@
     "y = df_train.ClassificationLabel\n",
     "\n",
     "X_test = df_test[feature_columns].values\n",
-    "y_test = df_test[\"RegressionLabel-CardiacIndex\"]"
+    "y_test = df_test[regression_label]"
    ]
   },
   {
@@ -173,8 +250,8 @@
     "                                 positive=False, random_state=True, selection='cyclic')\n",
     "\n",
     "clf = sklearn.linear_model.LinearRegression()\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "clf = GradientBoostingRegressor()"
+    "# from sklearn.ensemble import GradientBoostingRegressor\n",
+    "# clf = GradientBoostingRegressor()"
    ]
   },
   {
@@ -267,15 +344,6 @@
     "xx = X_pca[:,1]\n",
     "yy = X_pca[:,2]\n",
     "plt.scatter(xx,yy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_train[X_pca[:,0]<0].gender.sum()"
    ]
   }
  ],
