Some improvements of notebook night version

--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,14 +18,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "import os"
@@ -31,7 +30,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "data_location = os.path.normpath('../data')"
@@ -40,7 +42,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "file = os.path.join(data_location, \"hackathon_low_mixed_venous_oximetry.csv\")\n",
@@ -50,29 +55,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
-    "feature_columns = [\n",
-    "    'Heart_Rate', 'Ejection_Fraction',\n",
-    "       'Radial_Artery_Mean_Pressure', 'Radial_Artery_Systolic_Pressure',\n",
-    "       'Radial_Artery_Diastolic_Pressure', 'Radial_Artery_DpDt',\n",
-    "       'Pulmonary_Artery_Mean_Pressure', 'Central_Venous_Pressure', 'gender',\n",
-    "       'age_years', 'bsa', 'height', 'weight'\n",
-    "]\n",
+    "feature_columns = [col for col in df.columns if col not in [\"event_count\",\n",
+    "                                                            \"ClassificationLabel\",\n",
+    "                                                           \"subject_id\"]  and \"Regression\" not in col]\n",
     "\n",
     "if 'cardiac_output' in file:\n",
-    "    feature_columns += ['SvO2']\n",
     "    regression_label = \"RegressionLabel-CardiacIndex\"\n",
     "else:\n",
-    "\n",
-    "    feature_columns += ['Cardiac_Output']\n",
     "    regression_label = \"RegressionLabel-SvO2\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "source": [
+    "# investigations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": [
+    "df = (\n",
+    "    pd.read_csv(file)\n",
+    ")\n",
+    "df.groupby(\"subject_id\").count().event_count.value_counts()\n",
+    "df.isna().sum(axis=1).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "source": [
     "# Preprocessing"
    ]
@@ -80,50 +110,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "df = (\n",
     "    pd.read_csv(file)\n",
-    "    .dropna()\n",
     ")\n",
     "\n",
     "df = (\n",
     "    df\n",
     "    .assign(ClassificationLabel = df.ClassificationLabel==\"Positive\")\n",
     "    .assign(gender=df.gender==\"F\")\n",
+    "    .loc[lambda df: ~df.gender]\n",
     ")\n",
     "\n",
+    "\n",
+    "means = df[feature_columns+[\"subject_id\"]].groupby(\"subject_id\").mean()\n",
+    "\n",
+    "to_drop = []\n",
+    "for row_id, row in df.iterrows():\n",
+    "    for col, elem in row.items():\n",
+    "        if pd.isna(elem):\n",
+    "            new = means.loc[row.subject_id, col]\n",
+    "            if pd.isna(new):\n",
+    "                to_drop.append(row_id)\n",
+    "            else:    \n",
+    "                df.loc[row_id, col] = new\n",
+    "\n",
+    "df = df.loc[lambda df: ~df.index.isin(to_drop)]\n",
+    "                \n",
+    "# for col in feature_columns:\n",
+    "#     df[col].fillna(df[col].mean(), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": [
     "import sklearn.covariance\n",
     "env = sklearn.covariance.EllipticEnvelope()\n",
     "\n",
     "env.fit(df[feature_columns].values)\n",
     "\n",
-    "outliers = env.predict(df[feature_columns].values)\n"
+    "outliers = env.predict(df[feature_columns].values)\n",
+    "sum(outliers==-1)\n",
+    "df = df.loc[outliers==1]\n",
+    "\n",
+    "\n",
+    "len(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum(outliers==-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.loc[outliers==1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "for col in feature_columns:\n",
@@ -135,7 +186,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "source": [
     "# Train test split"
    ]
@@ -143,7 +197,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "subjects = list(set(df.subject_id))\n",
@@ -162,7 +219,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "source": [
     "# Classification"
    ]
@@ -170,7 +230,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -184,30 +247,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
     "clf = tree.DecisionTreeClassifier(max_depth=2)\n",
-    "clf = clf.fit(X,y)\n",
-    "\n",
-    "y_test_predict = clf.predict(X_test)\n"
+    "clf = sklearn.ensemble.GradientBoostingClassifier()\n",
+    "clf = clf.fit(X,y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(25,20))\n",
-    "_ = tree.plot_tree(clf)"
+    "# fig = plt.figure(figsize=(25,20))\n",
+    "# _ = tree.plot_tree(clf)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": [
+    "y_test_predict = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "import sklearn.metrics as metrics\n",
@@ -219,7 +302,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "source": [
     "# Regression"
    ]
@@ -227,12 +313,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X = df_train[feature_columns].values\n",
-    "y = df_train.ClassificationLabel\n",
+    "y = df_train[regression_label]\n",
     "\n",
     "X_test = df_test[feature_columns].values\n",
     "y_test = df_test[regression_label]"
@@ -241,23 +330,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
-    "clf = sklearn.linear_model.Lasso(alpha=0, fit_intercept=True,\n",
+    "clf = sklearn.linear_model.Lasso(alpha=0.1, fit_intercept=True,\n",
     "                                 normalize=True, precompute=False, copy_X=True,\n",
     "                                 max_iter=1000, tol=0.0001, warm_start=False,\n",
     "                                 positive=False, random_state=True, selection='cyclic')\n",
     "\n",
-    "clf = sklearn.linear_model.LinearRegression()\n",
+    "# clf = sklearn.linear_model.LinearRegression()\n",
     "# from sklearn.ensemble import GradientBoostingRegressor\n",
-    "# clf = GradientBoostingRegressor()"
+    "# clf = GradientBoostingRegressor()\n",
+    "\n",
+    "\n",
+    "# clf = sklearn.svm.SVR()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "clf.fit(X,y)\n",
@@ -267,7 +365,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "clf.fit(X,y)\n",
@@ -277,7 +378,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "sklearn.metrics.mean_squared_error(y_test, y_pred)"
@@ -286,7 +390,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "plt.scatter(y_test, y_pred)"
@@ -294,7 +401,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "source": [
     "# Dimensionality Reduction"
    ]
@@ -302,41 +412,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import sklearn.manifold"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "pca = PCA(n_components=3)\n",
+    "pca = sklearn.manifold.TSNE(n_components=3)\n",
     "\n",
     "scaler = MinMaxScaler()\n",
     "scaler.fit(X)\n",
     "X_normalized = scaler.transform(X)\n",
+    "\n",
     "pca.fit(X_normalized)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "np.argmax(pca.components_[0])"
+    "# import numpy as np\n",
+    "# np.argmax(pca.components_[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "X_pca = pca.fit_transform(X_normalized)\n",
@@ -345,9 +470,34 @@
     "yy = X_pca[:,2]\n",
     "plt.scatter(xx,yy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": [
+    "xx = X_pca[:,0]\n",
+    "yy = X_pca[:,1]\n",
+    "plt.scatter(xx,yy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "hide_code_all_hidden": false,
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python [conda env:cee-hacks-ml]",
