Basic column aggregations.

--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -127,8 +127,13 @@
     "    .loc[lambda df: ~df.gender]\n",
     ")\n",
     "\n",
-    "\n",
-    "means = df[feature_columns+[\"subject_id\"]].groupby(\"subject_id\").mean()\n",
+    "mean_columns = feature_columns+[\"subject_id\"]\n",
+    "# print(\"means\", mean_columns)\n",
+    "for col in mean_columns:\n",
+    "    if df[col].dtypes in ['object', 'bool', 'str']:\n",
+    "        mean_columns.remove(col)\n",
+    "        \n",
+    "means = df[mean_columns].groupby(\"subject_id\").mean()\n",
     "\n",
     "to_drop = []\n",
     "for row_id, row in df.iterrows():\n",
@@ -143,7 +148,9 @@
     "df = df.loc[lambda df: ~df.index.isin(to_drop)]\n",
     "                \n",
     "# for col in feature_columns:\n",
-    "#     df[col].fillna(df[col].mean(), inplace=True)"
+    "#     df[col].fillna(df[col].mean(), inplace=True)\n",
+    "\n",
+    "means = means.add_suffix('___mean')"
    ]
   },
   {
@@ -182,6 +189,31 @@
     "    if col != 'gender':\n",
     "        df[col].hist(bins=20)\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_df = pd.merge(df, means, on='subject_id')\n",
+    "\n",
+    "for col in feature_columns:\n",
+    "    mean_column_name = col + '___mean'\n",
+    "    if mean_column_name in aggregated_df.columns:\n",
+    "        aggregated_df[col + '___average_diff'] = aggregated_df[col] - aggregated_df[mean_column_name]\n",
+    "        \n",
+    "# print(aggregated_df)\n",
+    "\n",
+    "\n"
    ]
   },
   {
