Some improvements of notebook

--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -12,18 +12,7 @@
     "import pandas as pd\n",
     "import sklearn\n",
     "import scipy\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
     "import os"
    ]
   },
@@ -36,7 +25,31 @@
    },
    "outputs": [],
    "source": [
-    "data_location = os.path.normpath('../data')"
+    "data_location = os.path.normpath('../data')\n",
+    "\n",
+    "possible_data_files = [\"hackathon_low_mixed_venous_oximetry.csv\", \"hackathon_low_cardiac_output.csv\"]\n",
+    "\n",
+    "data_paths = [os.path.join(data_location, data_file) for data_file in possible_data_files]\n",
+    "\n",
+    "data_path = data_paths[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw = (\n",
+    "    pd.read_csv(data_path)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom columns and names per file"
    ]
   },
   {
@@ -48,24 +61,11 @@
    },
    "outputs": [],
    "source": [
-    "file = os.path.join(data_location, \"hackathon_low_mixed_venous_oximetry.csv\")\n",
-    "# file = os.path.join(data_location, \"hackathon_low_cardiac_output.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "feature_columns = [col for col in df.columns if col not in [\"event_count\",\n",
+    "feature_columns = [col for col in df_raw.columns if col not in [\"event_count\",\n",
     "                                                            \"ClassificationLabel\",\n",
     "                                                           \"subject_id\"]  and \"Regression\" not in col]\n",
     "\n",
-    "if 'cardiac_output' in file:\n",
+    "if 'cardiac_output' in data_path:\n",
     "    regression_label = \"RegressionLabel-CardiacIndex\"\n",
     "else:\n",
     "    regression_label = \"RegressionLabel-SvO2\""
@@ -73,28 +73,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
+   "metadata": {},
    "source": [
-    "# investigations"
+    "# Investigations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = (\n",
-    "    pd.read_csv(file)\n",
-    ")\n",
-    "df.groupby(\"subject_id\").count().event_count.value_counts()\n",
-    "df.isna().sum(axis=1).value_counts()"
+    "print(\"Number of rows\")\n",
+    "len(df_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Number of rows per patient\")\n",
+    "df_raw.groupby(\"subject_id\").count().event_count.value_counts().sort_index().plot.bar()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Number of nans per row\")\n",
+    "df_raw.isna().sum(axis=1).value_counts().sort_index().plot.bar()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Number of nans per column\")\n",
+    "df_raw.isna().sum(axis=0).plot.bar()\n",
+    "plt.show()"
    ]
   },
   {
@@ -110,6 +127,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_raw.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop patients with suspicion of Pulmonary hypertension\n",
+    "df.loc[lambda df: (df.Pulmonary_Artery_Mean_Pressure > 100) | (df.Pulmonary_Artery_Mean_Pressure == 0),\"Pulmonary_Artery_Mean_Pressure\"] = np.nan\n",
+    "df.loc[lambda df: df.Central_Venous_Pressure > 100, \"Central_Venous_Pressure\"] = np.nan\n",
+    "if \"End_Diastolic_Volume\" in df.columns:\n",
+    "    df.loc[lambda df: df.End_Diastolic_Volume > 400, \"End_Diastolic_Volume\"] = np.nan\n",
+    "df.loc[lambda df: df.Heart_Rate < 40, \"Heart_Rate\"] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -117,62 +166,111 @@
    "outputs": [],
    "source": [
     "df = (\n",
-    "    pd.read_csv(file)\n",
-    ")\n",
-    "\n",
-    "df = (\n",
     "    df\n",
-    "    .assign(ClassificationLabel = df.ClassificationLabel==\"Positive\")\n",
-    "    .assign(gender=df.gender==\"F\")\n",
-    "    .loc[lambda df: ~df.gender]\n",
+    "    .assign(ClassificationLabel = lambda df: df.ClassificationLabel==\"Positive\")\n",
+    "    .assign(gender=lambda df:df.gender==\"F\")\n",
     ")\n",
     "\n",
     "mean_columns = feature_columns+[\"subject_id\"]\n",
-    "# print(\"means\", mean_columns)\n",
     "for col in mean_columns:\n",
     "    if df[col].dtypes in ['object', 'bool', 'str']:\n",
     "        mean_columns.remove(col)\n",
     "        \n",
     "means = df[mean_columns].groupby(\"subject_id\").mean()\n",
     "\n",
-    "to_drop = []\n",
-    "for row_id, row in df.iterrows():\n",
-    "    for col, elem in row.items():\n",
-    "        if pd.isna(elem):\n",
-    "            new = means.loc[row.subject_id, col]\n",
-    "            if pd.isna(new):\n",
-    "                to_drop.append(row_id)\n",
-    "            else:    \n",
-    "                df.loc[row_id, col] = new\n",
+    "FILL_IN = \"overall_mean\"\n",
+    "FILL_IN = \"drop\"\n",
+    "FILL_IN = \"patient_mean\"\n",
+    "# FILL_IN = \"keep\"\n",
     "\n",
-    "df = df.loc[lambda df: ~df.index.isin(to_drop)]\n",
-    "                \n",
-    "# for col in feature_columns:\n",
-    "#     df[col].fillna(df[col].mean(), inplace=True)\n",
+    "if FILL_IN == \"patient_mean\":\n",
+    "    to_drop = []\n",
+    "    for row_id, row in df[mean_columns].iterrows():\n",
+    "        for col, elem in row.items():\n",
+    "            if pd.isna(elem):\n",
+    "                new = means.loc[row.subject_id, col]\n",
+    "                if pd.isna(new):\n",
+    "                    to_drop.append(row_id)\n",
+    "                else:    \n",
+    "                    df.loc[row_id, col] = new\n",
     "\n",
+    "    df = df.loc[lambda df: ~df.index.isin(to_drop)]\n",
+    "    print(f\"Dropped {len(to_drop)} rows because we were unabble to fill them\")\n",
+    "\n",
+    "elif FILL_IN == \"overall_mean\": \n",
+    "    for col in feature_columns:\n",
+    "        df[col].fillna(df[col].mean(), inplace=True)\n",
+    "elif FILL_IN == \"drop\":\n",
+    "    previous_len = len(df)\n",
+    "    df = df.dropna()\n",
+    "    print(f\"Dropped {previous_len - len(df)}\")\n",
+    "    \n",
+    "    \n",
     "means = means.add_suffix('___mean')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fixing obvious outliers\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn.covariance\n",
-    "env = sklearn.covariance.EllipticEnvelope()\n",
-    "\n",
-    "env.fit(df[feature_columns].values)\n",
-    "\n",
-    "outliers = env.predict(df[feature_columns].values)\n",
-    "sum(outliers==-1)\n",
-    "df = df.loc[outliers==1]\n",
-    "\n",
-    "\n",
-    "len(df)"
+    "# for col in feature_columns:\n",
+    "#     print(col)\n",
+    "#     if col != 'gender':\n",
+    "#         df[col].hist(bins=50)\n",
+    "#         plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def bsa(weight, height):\n",
+    "#     return np.sqrt(weight*height*100)/60\n",
+    "#     return pow(weight,0.425)*pow(height*100,0.725)*0.007184"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def fun(s):\n",
+    "#     return bsa(s.weight, s.height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.loc[(df.apply(lambda df: fun(df), axis = 1) - df.bsa) > 0.1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %matplotlib inline\n",
+    "# for col in feature_columns:\n",
+    "#     print(col)\n",
+    "#     if col != 'gender':\n",
+    "#         df[col].dropna().hist(bins=30)\n",
+    "#         plt.show()"
    ]
   },
   {
@@ -184,11 +282,15 @@
    },
    "outputs": [],
    "source": [
-    "for col in feature_columns:\n",
-    "    print(col)\n",
-    "    if col != 'gender':\n",
-    "        df[col].hist(bins=20)\n",
-    "        plt.show()"
+    "# import sklearn.covariance\n",
+    "# env = sklearn.covariance.EllipticEnvelope()\n",
+    "\n",
+    "# env.fit(df[feature_columns].values)\n",
+    "\n",
+    "# outliers = env.predict(df[feature_columns].values)\n",
+    "# df = df.loc[outliers==1]\n",
+    "\n",
+    "# print(f\"Dropping {sum(outliers==-1)} outliers keeping {len(df)}\")"
    ]
   },
   {
@@ -204,16 +306,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "means_for_aggregation = means.copy()\n",
     "aggregated_df = pd.merge(df, means, on='subject_id')\n",
-    "\n",
+    "aggregated_columns = []\n",
     "for col in feature_columns:\n",
     "    mean_column_name = col + '___mean'\n",
     "    if mean_column_name in aggregated_df.columns:\n",
     "        aggregated_df[col + '___average_diff'] = aggregated_df[col] - aggregated_df[mean_column_name]\n",
-    "        \n",
-    "# print(aggregated_df)\n",
-    "\n",
-    "\n"
+    "        aggregated_columns.append(col + '___average_diff')"
    ]
   },
   {
@@ -236,14 +336,14 @@
    "outputs": [],
    "source": [
     "subjects = list(set(df.subject_id))\n",
-    "N = int(len(subjects)/3*2)\n",
+    "N = int(len(subjects)/4*3)\n",
     "train_subjects = subjects[:N]\n",
     "test_subjects = subjects[N:]\n",
     "\n",
     "\n",
     "\n",
-    "df_train=df.loc[df.subject_id.isin(train_subjects)]\n",
-    "df_test=df.loc[df.subject_id.isin(test_subjects)]\n",
+    "df_train=aggregated_df.loc[lambda df: df.subject_id.isin(train_subjects)]\n",
+    "df_test=aggregated_df.loc[lambda df: df.subject_id.isin(test_subjects)]\n",
     "\n",
     "print(len(df_test))\n",
     "print(len(df_train))"
@@ -286,8 +386,8 @@
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
-    "clf = tree.DecisionTreeClassifier(max_depth=2)\n",
-    "clf = sklearn.ensemble.GradientBoostingClassifier()\n",
+    "# clf = tree.DecisionTreeClassifier(max_depth=2)\n",
+    "clf = XGBClassifier(scale_pos_weight=1, max_depth=2, subsample=1, colsample_bytree=1, min_child_weight=40)\n",
     "clf = clf.fit(X,y)"
    ]
   },
@@ -313,7 +413,9 @@
    },
    "outputs": [],
    "source": [
-    "y_test_predict = clf.predict(X_test)"
+    "THRESHOLD = 0.7\n",
+    "y_test_predict = clf.predict_proba(X_test)[:,0] < THRESHOLD\n",
+    "\n"
    ]
   },
   {
@@ -330,6 +432,21 @@
     "pd.DataFrame(conf_matrix,\n",
     "            index=[f\"label_{i}\" for i in range(0, max(y_test)+1)],\n",
     "            columns=[f\"pred_{i}\" for i in range(0, max(y_test)+1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from yellowbrick.classifier import ClassBalance, ROCAUC, ClassificationReport, ClassPredictionError\n",
+    "\n",
+    "clf.target_type_ = int\n",
+    "rocauc = ROCAUC(clf, size=(1080, 720), classes=[0,1])\n",
+    "\n",
+    "rocauc.score(X_test, y_test)  \n",
+    "r = rocauc.poof()"
    ]
   },
   {
@@ -373,25 +490,12 @@
     "                                 max_iter=1000, tol=0.0001, warm_start=False,\n",
     "                                 positive=False, random_state=True, selection='cyclic')\n",
     "\n",
-    "# clf = sklearn.linear_model.LinearRegression()\n",
-    "# from sklearn.ensemble import GradientBoostingRegressor\n",
-    "# clf = GradientBoostingRegressor()\n",
+    "clf = sklearn.linear_model.LinearRegression()\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "clf = GradientBoostingRegressor(max_depth=2, subsample=1)\n",
     "\n",
     "\n",
     "# clf = sklearn.svm.SVR()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "clf.fit(X,y)\n",
-    "y_pred = clf.predict(X)"
    ]
   },
   {
@@ -458,6 +562,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff = feature_columns.copy()\n",
+    "ff.remove('gender')\n",
+    "\n",
+    "X_for_pca = df[ff].values\n",
+    "y_for_pca = df.ClassificationLabel.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -465,13 +582,14 @@
    "outputs": [],
    "source": [
     "pca = PCA(n_components=3)\n",
-    "pca = sklearn.manifold.TSNE(n_components=3)\n",
+    "# pca = sklearn.manifold.TSNE(n_components=3)\n",
     "\n",
     "scaler = MinMaxScaler()\n",
-    "scaler.fit(X)\n",
-    "X_normalized = scaler.transform(X)\n",
+    "scaler.fit(X_for_pca)\n",
+    "X_normalized = scaler.transform(X_for_pca)\n",
     "\n",
-    "pca.fit(X_normalized)"
+    "pca.fit(X_normalized)\n",
+    "X_pca = pca.fit_transform(X_normalized)"
    ]
   },
   {
@@ -483,47 +601,30 @@
    },
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# np.argmax(pca.components_[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "X_pca = pca.fit_transform(X_normalized)\n",
+    "%matplotlib notebook\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import ListedColormap, LinearSegmentedColormap\n",
     "\n",
-    "xx = X_pca[:,1]\n",
-    "yy = X_pca[:,2]\n",
-    "plt.scatter(xx,yy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
+    "cm = plt.cm.get_cmap('RdYlBu')\n",
+    "top = plt.cm.get_cmap('Oranges_r', 60)\n",
+    "bottom = plt.cm.get_cmap('Blues', 100)\n",
+    "\n",
+    "\n",
+    "\n",
     "xx = X_pca[:,0]\n",
     "yy = X_pca[:,1]\n",
-    "plt.scatter(xx,yy)"
+    "zz = X_pca[:, 2]\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "ax.scatter(xx,yy,zz,c=y_for_pca, alpha=1, vmin=0, vmax=y.max(), cmap=newcmp, marker = 'o')\n",
+    "# plt.colorbar(aa)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
