Some improvements of notebook

--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -360,11 +360,12 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "tresh = 60\n",
     "X = df_train[feature_columns].values\n",
-    "y = df_train.ClassificationLabel\n",
+    "y = df_train[regression_label]<thres\n",
     "\n",
     "X_test = df_test[feature_columns].values\n",
-    "y_test = df_test.ClassificationLabel"
+    "y_test = df_test[regression_label]<thres"
    ]
   },
   {
@@ -377,8 +378,9 @@
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
+    "import xgboost\n",
     "# clf = tree.DecisionTreeClassifier(max_depth=2)\n",
-    "clf = XGBClassifier(scale_pos_weight=1, max_depth=2, subsample=1, colsample_bytree=1, min_child_weight=40)\n",
+    "clf = xgboost.XGBClassifier(scale_pos_weight=10, max_depth=2, subsample=1, colsample_bytree=1, min_child_weight=40)\n",
     "clf = clf.fit(X,y)"
    ]
   },
@@ -404,7 +406,7 @@
    },
    "outputs": [],
    "source": [
-    "THRESHOLD = 0.7\n",
+    "THRESHOLD = 0.05\n",
     "y_test_predict = clf.predict_proba(X_test)[:,0] < THRESHOLD\n",
     "\n"
    ]
