Forgotten numpy import

--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -13,7 +13,8 @@
     "import sklearn\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
@@ -360,7 +361,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "tresh = 60\n",
+    "thres = 2.4\n",
     "X = df_train[feature_columns].values\n",
     "y = df_train[regression_label]<thres\n",
     "\n",
