Add dropping wrong bsa values

--- a/investigation_new.ipynb
+++ b/investigation_new.ipynb
@@ -56,6 +56,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bsa(weight, height):\n",
+    "    return np.sqrt(weight*height*100)/60\n",
+    "    return pow(weight,0.425)*pow(height*100,0.725)*0.007184\n",
+    "\n",
+    "def fun(s):\n",
+    "    return bsa(s.weight, s.height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -68,6 +82,7 @@
     "\n",
     "if 'cardiac_output' in data_path:\n",
     "    regression_label = \"RegressionLabel-CardiacIndex\"\n",
+    "#     df_raw = df_raw.loc[lambda df: (df.apply(lambda df: fun(df), axis = 1) - df.bsa) < 0.1]\n",
     "else:\n",
     "    regression_label = \"RegressionLabel-SvO2\""
    ]
@@ -227,36 +242,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def bsa(weight, height):\n",
-    "#     return np.sqrt(weight*height*100)/60\n",
-    "#     return pow(weight,0.425)*pow(height*100,0.725)*0.007184"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def fun(s):\n",
-    "#     return bsa(s.weight, s.height)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.loc[(df.apply(lambda df: fun(df), axis = 1) - df.bsa) > 0.1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# %matplotlib inline\n",
     "# for col in feature_columns:\n",
     "#     print(col)\n",
@@ -407,7 +392,7 @@
    },
    "outputs": [],
    "source": [
-    "THRESHOLD = 0.05\n",
+    "THRESHOLD = 0.5\n",
     "y_test_predict = clf.predict_proba(X_test)[:,0] < THRESHOLD\n",
     "\n"
    ]
